# computer-vision

./: README.md
assignment1/comp691cv-a1/: CMakeLists.txt  main.cpp  readme.txt
assignment2/comp691cv-a2/: CMakeLists.txt  main.cpp
assignment3-midterm-quiz/untitled3/: CMakeLists.txt  HarrisDetector.cpp  HarrisDetector.h  main.cpp
assignment4/comp691cv_a3/: CMakeLists.txt  HarrisDetector.cpp  HarrisDetector.h  main.cpp  stitch_util.cpp  stitch_util.h  util.cpp  util.h
assignment5-final-proj/photometric-stereo/: CMakeLists.txt  main.cpp  report.txt
